--- a/frontend/actors.html
+++ b/frontend/actors.html
@@ -50,67 +50,9 @@
 
         <section class="actor-list">
             <h2>All Actors</h2>
-            <div class="actor-grid">
-                <!-- Example Actor Cards -->
-                <div class="actor-card">
-                    <div class="actor-photo">
-                        <img src="https://via.placeholder.com/200x200" alt="Leonardo DiCaprio">
-                    </div>
-                    <h3>Leonardo DiCaprio</h3>
-                    <p class="nationality">American</p>
-                    <p class="birth-date">Born: November 11, 1974</p>
-                    <p class="movie-count">Featured in 25 movies</p>
-                    <div class="notable-movies">
-                        <h4>Notable Works:</h4>
-                        <ul>
-                            <li>Titanic (1997)</li>
-                            <li>Inception (2010)</li>
-                            <li>The Revenant (2015)</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="actor-card">
-                    <div class="actor-photo">
-                        <img src="https://via.placeholder.com/200x200" alt="Meryl Streep">
-                    </div>
-                    <h3>Meryl Streep</h3>
-                    <p class="nationality">American</p>
-                    <p class="birth-date">Born: June 22, 1949</p>
-                    <p class="movie-count">Featured in 45 movies</p>
-                    <div class="notable-movies">
-                        <h4>Notable Works:</h4>
-                        <ul>
-                            <li>The Devil Wears Prada (2006)</li>
-                            <li>Sophie's Choice (1982)</li>
-                            <li>Mamma Mia! (2008)</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="actor-card">
-                    <div class="actor-photo">
-                        <img src="https://via.placeholder.com/200x200" alt="Tom Hanks">
-                    </div>
-                    <h3>Tom Hanks</h3>
-                    <p class="nationality">American</p>
-                    <p class="birth-date">Born: July 9, 1956</p>
-                    <p class="movie-count">Featured in 40 movies</p>
-                    <div class="notable-movies">
-                        <h4>Notable Works:</h4>
-                        <ul>
-                            <li>Forrest Gump (1994)</li>
-                            <li>Cast Away (2000)</li>
-                            <li>Saving Private Ryan (1998)</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            <div class="actor-grid"></div> 
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2024 Movie Database. All rights reserved.</p>
-    </footer>
+    <script src="js/actors.js" defer></script>
 </body>
 </html> 
