--- a/frontend/movies.html
+++ b/frontend/movies.html
@@ -30,6 +30,15 @@
         </form>
       </section>
 
+      <section class="update-section">
+        <h2>Update Movie Title</h2>
+        <form id="updateForm">
+          <input type="text" id="updateMovieIdInput" placeholder="Enter Movie ID..." />
+          <input type="text" id="updateTitleInput" placeholder="Enter New Title..." />
+          <button type="submit">Update Title</button>
+        </form>
+      </section>
+
       <section class="filters">
         <h2>Filter Movies</h2>
         <form action="movies.html" method="GET">
