--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,26 +22,11 @@
     </header>
 
     <main>
-        <section class="search-section">
-            <h2>Search Movies</h2>
-            <form action="search_results.html" method="GET">
-                <input type="text" name="search" placeholder="Search for movies, actors, or directors...">
-                <select name="search_type">
-                    <option value="movie">Movies</option>
-                    <option value="actor">Actors</option>
-                    <option value="director">Directors</option>
-                </select>
-                <button type="submit">Search</button>
-            </form>
-        </section>
-
         <section class="featured-movies">
             <h2>Featured Movies</h2>
-            <!-- Placeholder for featured movies -->
-            <div class="movie-grid">
-                <!-- Movie cards will be populated here -->
-            </div>
+            <div class="movie-grid" id="featured-movie-grid"></div>
         </section>
     </main>
+    <script src="js/home.js" defer></script>
 </body>
 </html> 
