--- a/frontend/reviews.html
+++ b/frontend/reviews.html
@@ -35,7 +35,7 @@
 
                 <div class="form-group">
                     <label for="rating">Rating (1-10):</label>
-                    <input type="number" name="rating" id="rating" min="1" max="10" required>
+                    <input type="number" name="rating" id="rating" min="1" max="10" step="0.1" required>
                 </div>
 
                 <div class="form-group">
